css-exercise-four/css/style.css
/** border: 5px solid #000000; **/

*, *:before, *:after {
  box-sizing: border-box;
}

body {
  background-color: #dadada;
  font-size: 20px;
}

.container > h1 {
  font-size: 14px;
  font-family: Open Sans;
  letter-spacing: 4px;
  padding: 40px;
  text-transform: uppercase;
  text-align: center;
}

div {
  overflow: hidden;
  padding-bottom: 20px;
}

div > h1 {
  font-family: serif;
  text-transform: capitalize;
  margin: 60px 0px 0px 60px;
  position: absolute;
}

img {
  width: 125%;
  height: auto;
}

/* code added to create two-column design (TABLET) */

@media screen and (min-width: 575px)
{
  div {
    width: 38%;
    border: 5px solid #000000;
  }
  section {
    float: left;
  }
}

/* code added to create 4-column design (DESKTOP) */

@media screen and (min-width: 991px)
{
   div {
    width: 20%;
  }
}

